<resources>
    <string name="app_name">workAble</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello, Sign up to \nget started!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="or">---------------  Or  ---------------</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="orline">────────── Or ──────────</string>
    <string name="login_with_google">Login with Google</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back_nwe_re_so_happy_to_see_you_again">Welcome Back! \nWe\'re so happy to see you again.</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="fill_in_your_resume">Fill In Your Resume</string>
    <string name="get_more_attention_and_a_better_chance_of_finding_a_great_job">Get more attention and a better chance of finding a great job</string>
    <string name="get_more_job_opportunities_by_filling_nin_your_resume">Get more job opportunities by filling \nin your resume!</string>
    <string name="fill_in_your_resume_to_have_a_nbetter_shot_at_getting_hired">Fill in your resume to have a \nbetter shot at getting hired!</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="top_companies">Top Companies</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="full_time">Full Time</string>
    <string name="remote">Remote</string>
    <string name="salary_5000_6000">Salary: $5000-$6000</string>
    <string name="edit_details">Edit Details</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="your_job_searches">Your Job Searches</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up!</string>
    <string name="john_singh">John Singh</string>
</resources>