<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ECEFEF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#ECEFEF"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/sign_up"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_nwe_re_so_happy_to_see_you_again"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"

        android:textSize="34sp"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/back"
        android:textColor="#000226"
        android:layout_marginStart="26dp"
        android:textFontWeight="600"
        tools:targetApi="p" />


    <EditText
        android:id="@+id/email"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/signUp"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/login"
        android:paddingStart="18dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp"
        android:background="@drawable/login"
        android:paddingStart="18dp" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:paddingEnd="32dp"
        android:gravity="end"
        android:layout_below="@+id/password"
        android:textColor="#8D8080"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="300"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="69dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:background="@drawable/signup"
        android:textSize="20sp"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orline"
        android:gravity="center"
        android:textColor="#8D8080"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="600"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/google"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_with_google"
        android:textSize="20sp"
        android:textColor="#584646"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/google"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textViewSignUpPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:gravity="center"
        android:layout_below="@+id/google"
        android:textColor="#8D8080"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="400"
        android:textSize="22sp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>