<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#3788A2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#3788A2"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/sign_up"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/hello"
        android:textSize="36sp"
        android:layout_below="@+id/back"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000226"
        android:layout_marginStart="26dp"
        android:textFontWeight="600"
        tools:targetApi="p" />

    <EditText
        android:id="@+id/fullName"
        android:fontFamily="sans-serif-medium"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_below="@+id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/login"
        android:paddingStart="18dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/fullName"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/login"
        android:paddingStart="18dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp"
        android:background="@drawable/login"
        android:paddingStart="18dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp"
        android:background="@drawable/login"
        android:paddingStart="18dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:background="@drawable/signup"
        android:textSize="20sp"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="600"
        android:textSize="20sp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/google"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_with_google"
        android:textSize="20sp"
        android:textColor="#584646"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="-144dp"
        android:background="@drawable/google"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textViewLoginPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login"
        android:gravity="center"
        android:layout_below="@+id/google"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="400"
        android:textSize="22sp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>